[package]
name = "blind_adaptor_bjb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
serde = "1.0"
serde_derive = "1.0"
bincode = "1.3"
num-bigint = "0.4.3"
anyhow = "1.0"
ark-circom = {path="../blind_adaptor_bjb/circom-compat"}
ark-snark = { version = "0.4" }
ark-groth16 = "0.4.0"
sha2 = "0.10.8"
babyjubjub-rs = {path="../blind_adaptor_bjb/babyjubjub-rs"}
poseidon-rs = "0.0.8"
ark-bn254 = "0.4.0"
ark-ff = "0.4.1"
num-traits = "0.2.15"
ff = {package="ff_ce" , version= "0.11", features = ["derive"]}
num-integer = "0.1"
thiserror = "1.0.39"

# error handling
color-eyre = "0.6.2"